# materijali

./: README.md  pyproject.toml
01/: Uvodni_cas.ipynb
02/: 02-Mere_slicnosti.ipynb  Mere_slicnosti.ipynb  Rad_sa_nedostajucim_vrednostima.ipynb
03/: Normalizacija.ipynb  Zadatak.ipynb
04/: Stabla_odlucivanja.ipynb
05/: Najblizi_susedi.ipynb
06/: NaiveBayes.ipynb
08/: 01 - Poredjenje linearnog i kernelizovanog SVM-a.ipynb  02 - SVM i podesavanje hiperparametara.ipynb
09/: Rad_sa_nebalansiranim_klasama.ipynb
10/: Kmeans.ipynb
11/: Agglomerative_and_DBSCAN.ipynb
13/: 01.ipynb  02.ipynb  03.ipynb  circles.csv
13/exam_02/: moons.csv  wine.csv
